--- a/src/jquery.gh-embed.scss
+++ b/src/jquery.gh-embed.scss
@@ -2,6 +2,7 @@ $headerHeight: 40px;
 $blue: #09f;
 
 .ui-widget.ui-ghembed.ui-tabs {
+    font-size: 1em;
     position: relative;
     box-sizing: border-box;
     padding: 0;
@@ -32,6 +33,7 @@ $blue: #09f;
             overflow-y: auto;
         }
         pre code {
+            padding: 0;
             background: none;
         }
         iframe {
@@ -57,7 +59,7 @@ $blue: #09f;
     // JSFIddle
     .JSFiddle a {
         text-decoration: none;
-        background: url(../images/JSFiddle-img.png) no-repeat 10px center $blue;
+        background: url(../img/JSFiddle-img.png) no-repeat 10px center $blue;
         color: #fff;
         padding: 0 10px 0 50px;
         position: relative;
@@ -66,16 +68,15 @@ $blue: #09f;
     }
 
     .JSFiddle a:hover {
-        background: url(../images/JSFiddle-img.png) no-repeat 10px center darken($blue, 10%); //#0083db;
+        background: url(../img/JSFiddle-img.png) no-repeat 10px center darken($blue, 10%); //#0083db;
     }
 
     // Copy
     .codeViewerSelectAll {
         position: absolute;
         padding: 5px;
-        top: 60px;
+        top: 55px;
         right: 30px;
-        width: 130px;
         background-color: #e0e0e0;
         border: 1px solid #c0c0c0;
         color: #707070;
@@ -99,7 +100,6 @@ $blue: #09f;
         position: relative;
         padding: 0 1em;
         border: none;
-        width: 100%;
     }
 
     // Loader
@@ -110,8 +110,9 @@ $blue: #09f;
         border: .3em solid #f5f5f5;
         border-top: .3em solid #0099ff;
         border-radius: 50%;
-        width: 2em;
-        height: 2em;
+        width: 2.4em;
+        height: 2.4em;
+        box-sizing: border-box;
         animation: spin 1.5s ease-out infinite;
     }
 
